--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,7 @@ services:
   - type: web
     name: ranquiz-backend
     env: go
-    root_dir: backend
-    buildCommand:     buildCommand: go mod tidy && GOOS=linux GOARCH=amd64 go build -o ranquiz-backend main.go && pip install -r requirements.txt
+    buildCommand: apt-get update && apt-get install -y python3 python3-pip && go mod tidy && GOOS=linux GOARCH=amd64 go build -o ranquiz-backend main.go && pip install -r requirements.txt && chmod +x ranquiz-backend
     startCommand: ./ranquiz-backend
     ports:
       - 8080
@@ -11,4 +10,6 @@ services:
       - key: GUMELOOP_API_KEY
         sync: false
       - key: GUMELOOP_USER_ID
+        sync: false
+      - key: GUMELOOP_FLOW_ID
         sync: false
