--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,14 @@ services:
   - type: web
     name: ranquiz-backend
     env: go
-    buildCommand: apt-get update && apt-get install -y python3 python3-pip && go mod tidy && GOOS=linux GOARCH=amd64 go build -o ranquiz-backend main.go && python3 -m pip install -r requirements.txt && chmod +x ranquiz-backend
+    rootDir: backend
+    buildCommand: |
+      apt-get update && apt-get install -y python3 python3-pip python3-venv && \
+      go mod tidy && \
+      GOOS=linux GOARCH=amd64 go build -o ranquiz-backend main.go && \
+      python3 -m venv venv && \
+      ./venv/bin/pip install -r requirements.txt && \
+      chmod +x ranquiz-backend
     startCommand: ./ranquiz-backend
     ports:
       - 8080
