--- a/render.yaml
+++ b/render.yaml
@@ -4,13 +4,12 @@ services:
     env: go
     buildCommand: |
       apt-get update && apt-get install -y python3 python3-pip python3-venv && \
-      cd backend && \
-      go mod tidy && \
-      GOOS=linux GOARCH=amd64 go build -o ranquiz-backend main.go && \
+      go mod tidy -C backend && \
+      GOOS=linux GOARCH=amd64 go build -o ranquiz-backend backend/main.go && \
       python3 -m venv venv && \
-      ./venv/bin/pip install -r requirements.txt && \
+      ./venv/bin/pip install -r backend/requirements.txt && \
       chmod +x ranquiz-backend
-    startCommand: cd backend && ls -la && ./ranquiz-backend
+    startCommand: ./ranquiz-backend
     ports:
       - 8080
     envVars:
@@ -20,3 +19,4 @@ services:
         sync: false
       - key: GUMELOOP_FLOW_ID
         sync: false
+
