--- a/render.yaml
+++ b/render.yaml
@@ -3,11 +3,10 @@ services:
     name: ranquiz-backend
     env: go
     buildCommand: |
-      apt-get update && apt-get install -y python3 python3-pip python3-venv && \
+      apt-get update && apt-get install -y python3 python3-pip && \
       go mod tidy -C backend && \
       GOOS=linux GOARCH=amd64 go build -o ranquiz-backend backend/main.go && \
-      python3 -m venv venv && \
-      ./venv/bin/pip install -r backend/requirements.txt && \
+      pip3 install -r backend/requirements.txt && \
       chmod +x ranquiz-backend
     startCommand: ./ranquiz-backend
     ports:
@@ -19,4 +18,3 @@ services:
         sync: false
       - key: GUMELOOP_FLOW_ID
         sync: false
-
