--- a/render.yaml
+++ b/render.yaml
@@ -4,9 +4,9 @@ services:
     env: go
     buildCommand: |
       apt-get update && apt-get install -y python3 python3-pip && \
-      go mod tidy -C backend && \
-      GOOS=linux GOARCH=amd64 go build -o ranquiz-backend backend/main.go && \
-      pip3 install -r backend/requirements.txt && \
+      go mod tidy && \
+      GOOS=linux GOARCH=amd64 go build -o ranquiz-backend main.go && \
+      pip3 install -r requirements.txt && \
       chmod +x ranquiz-backend
     startCommand: ./ranquiz-backend
     ports:
