--- a/render.yaml
+++ b/render.yaml
@@ -6,11 +6,13 @@ services:
       apt-get update && apt-get install -y python3 python3-pip && \
       python3 --version && pip3 --version && \
       pip3 install --upgrade pip && \
-      pip3 install --no-cache-dir --upgrade --force-reinstall -r requirements.txt && \
+      pip3 install -r requirements.txt && \
       python3 -m pip show gumloop && \
-      chmod +x ranquiz-backend && \
+      ls -l requirements.txt && \
+      cat requirements.txt && \
       go mod tidy && \
-      GOOS=linux GOARCH=amd64 go build -o ranquiz-backend main.go
+      GOOS=linux GOARCH=amd64 go build -o ranquiz-backend main.go && \
+      chmod +x ranquiz-backend
     startCommand: ./ranquiz-backend
     ports:
       - 8080
