--- a/render.yaml
+++ b/render.yaml
@@ -1,19 +1,8 @@
 services:
   - type: web
     name: ranquiz-backend
-    env: go
-    buildCommand: |
-      apt-get update && apt-get install -y python3 python3-pip && \
-      python3 --version && pip3 --version && \
-      pip3 install --upgrade pip && \
-      pip3 install -r requirements.txt && \
-      python3 -m pip show gumloop && \
-      ls -l requirements.txt && \
-      cat requirements.txt && \
-      go mod tidy && \
-      GOOS=linux GOARCH=amd64 go build -o ranquiz-backend main.go && \
-      chmod +x ranquiz-backend
-    startCommand: ./ranquiz-backend
+    env: docker
+    dockerfilePath: ./backend/Dockerfile
     ports:
       - 8080
     envVars:
