--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,14 @@
 services:
   - type: web
     name: ranquiz-backend
-    env: docker
-    dockerfilePath: ./Dockerfile
+    env: go
+    root_dir: backend
+    buildCommand: go mod tidy && GOOS=linux GOARCH=amd64 go build -o ranquiz-backend main.go && pip install -r requirements.txt
+    startCommand: ./ranquiz-backend
     ports:
       - 8080
     envVars:
       - key: GUMELOOP_API_KEY
         sync: false
       - key: GUMELOOP_USER_ID
-        sync: false
-      - key: GUMELOOP_FLOW_ID
         sync: false
